--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ flex-direction: row;
                 </p>           
             </h4>
             </div>
-               <div><img src="pic.JPG" >
+               <div><img src="pic (2).JPG" >
          </div>     
           </section>
         </article>
